# Vivant

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  todo.txt  update.txt  vite.config.js
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-deb.yml  build-rpm.yml  ci.yml  codeql.yml  eslint.yml
scripts/: docker-shell.sh
src/: annotations.js  api.js  bookinfo.js  cover-cache.js  format.js  image-viewer.js  library.js  main.js  progress-ui.js  reader-links.js  reader-selection.js  reader.js  reading-timer.js  resume-locator.js  search.js  settings.js  style.css  text-match.js  toc.js  ui.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: vivant.desktop
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  epub.rs  lib.rs  library.rs  main.rs
src/css/: annotations.css  base.css  bookinfo.css  components.css  image-viewer.css  library.css  reader.css  search.css  settings.css  tokens.css
src/tests/: format.spec.js  text-match.spec.js  ui.spec.js
