[package]
name = "Vivant"
version = "0.1.0"
description = "Vivant — a modern EPUB reader for Linux"
authors = []
edition = "2021"

[lib]
name = "vivant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Vivant"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri               = { version = "2.5", default-features = false, features = ["protocol-asset", "wry", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs     = "2"
tauri-plugin-opener = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
epub                = "2"
zip                 = "2"
rusqlite            = { version = "0.31", features = ["bundled"] }
r2d2                = "0.8"
r2d2_sqlite         = "0.24"
tokio               = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
dirs                = "5"
uuid                = { version = "1", features = ["v4"] }
chrono              = { version = "0.4", features = ["serde"] }
anyhow              = "1"
urlencoding          = "2"
url                 = "2"
thiserror           = "1"
log                 = "0.4"
env_logger          = "0.11"
image = "0.24"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "z"
strip         = true
